Refactor AdTree caching and variable ordering
Refactored the AdTree class to streamline variable caching and ordering. Introduced a static constant for maximum cache size and removed redundant fields. Updated the buildTable method to ensure variables are processed in the correct order and implemented an inverse mapping. Restored methods for cell indexing, fetching, and counting to reflect these changes.